# jano

./: .dockerignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6bcde5592820_add_session_id_to_messages.py  f939657a62d0_migracion_inicial.py
backend/src/: main.py
backend/src/agents/chat_agent/: agent.py  deps.py  prompt.py  tools.py
backend/src/api/: dependencies.py
backend/src/api/routes/: auth.py  chat.py  documents.py
backend/src/core/: config.py  database.py  security.py
backend/src/domain/models/: __init__.py  document.py  document_chunk.py  message.py  user.py
backend/src/domain/schemas/: document.py  user.py
backend/src/repositories/: document_chunk_repository.py  document_repository.py  message_repository.py  storage_repository.py  user_repository.py
backend/src/services/: auth_service.py  boe_document_service.py  chat_service.py  document_service.py  embedding_service.py  storage_service.py  user_service.py
frontend/: App.tsx  Dockerfile  README.md  i18n.ts  index.html  index.tsx  metadata.json  nginx.conf  package.json  types.ts
frontend/components/: Button.tsx  ChatArea.tsx  ConfirmationModal.tsx  JanusLogo.tsx  LoginScreen.tsx  SettingsMenu.tsx  Sidebar.tsx  SourceCard.tsx  ThemeContext.tsx
frontend/locales/en/: translation.json
frontend/locales/es/: translation.json
frontend/services/: api.ts  auth.ts  chat.ts  documents.ts
